cluster/affine/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: affine
  labels:
    app: affine
spec:
  selector:
    matchLabels:
      app: affine
  template:
    metadata:
      labels:
        app: affine
    spec:
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: affine-pvc
        - name: storage-volume
          persistentVolumeClaim:
            claimName: affine-storage-pvc
        - name: db-volume
          persistentVolumeClaim:
            claimName: affine-db-pvc
      containers:
        - name: affine
          image: ghcr.io/toeverything/affine-graphql:stable
          volumeMounts:
            - mountPath: /root/.affine/storage
              name: storage-volume
            - mountPath: /root/.affine/config
              name: data-volume
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 3010
        - name: affine-migration

          image: ghcr.io/toeverything/affine-graphql:stable
          volumeMounts:
            - mountPath: /root/.affine/storage
              name: storage-volume
            - mountPath: /root/.affine/config
              name: data-volume
          securityContext:
            allowPrivilegeEscalation: false
          command: ['sh', '-c', 'node ./scripts/self-host-predeploy.js']
        - name: redis
          image: redis
          ports:
              - containerPort: 6379
        - name: postgres
          image: postgres:16-alpine
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-volume
          ports:
            - containerPort: 5432
      automountServiceAccountToken: false
